# Tournaments_CPP_and_Python_Bot

./: CMakeLists.txt  CSVManager.cpp  CSVManager.h  Database.cpp  Database.h  GroupManager.cpp  GroupManager.h  Operations.cpp  Operations.h  ParticipantManager.cpp  ParticipantManager.h  README.md  ResultManager.cpp  ResultManager.h  SQLCommands.cpp  SQLCommands.h  SQLRequests.cpp  SQLRequests.h  Translate.cpp  Translate.h  main.cpp  main.py
C++ files/: AuthorizationData.cpp  AuthorizationData.h  CMakeLists.txt  CSVManager.cpp  CSVManager.h  Database.cpp  Database.h  ErrorMessages.cpp  ErrorMessages.h  GeneralMessages.cpp  GeneralMessages.h  GroupManager.cpp  GroupManager.h  InterfaceLabels.cpp  InterfaceLabels.h  Libraries.h  Operations.cpp  Operations.h  ParticipantManager.cpp  ParticipantManager.h  ResultManager.cpp  ResultManager.h  SQLCommands.cpp  SQLCommands.h  SQLRequests.cpp  SQLRequests.h  Translate.cpp  Translate.h  main.cpp
CPP_files/: AuthorizationData.cpp  AuthorizationData.h  CMakeLists.txt  CSVManager.cpp  CSVManager.h  Database.cpp  Database.h  ErrorMessages.cpp  ErrorMessages.h  GeneralMessages.cpp  GeneralMessages.h  GroupManager.cpp  GroupManager.h  InterfaceLabels.cpp  InterfaceLabels.h  Libraries.h  Messages.cpp  Messages.h  Operation.h  Operations.cpp  Operations.h  Participant.h  ParticipantManager.cpp  ParticipantManager.h  ResultManager.cpp  ResultManager.h  SQLCommands.cpp  SQLCommands.h  SQLRequests.cpp  SQLRequests.h  Translate.cpp  Translate.h  main.cpp
Python files/: Buttons.py  Credentials.py  DebugMessages.py  main.py
(+13 files in other folders)
